# aiogram_django_template

./: .env.example  .gitignore  Dockerfile  compose.yml  justfile  pyproject.toml  start.sh
bot/: main.py  middlewares.py
config/: settings.py  urls.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py
